--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#male">Male</a></li>
                 <li><a href="#female">Female</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <!-- <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li> -->
                 <li class="auth-link"><a href="#auth" onclick="showAuth()">Login / Signup</a></li>
             </ul>
         </div>
